[gd_scene load_steps=25 format=3 uid="uid://qwkuslpdpf7r"]

[ext_resource type="Script" path="res://src/game/mob/mob.gd" id="1_uxywq"]
[ext_resource type="Texture2D" uid="uid://b7ekkcdmlor8y" path="res://assets/Tileset/Tileset.png" id="2_n2clt"]
[ext_resource type="Script" path="res://src/game/mob/damage_hitbox.gd" id="3_pi4co"]
[ext_resource type="AudioStream" uid="uid://un102xcifjyi" path="res://src/game/mob/follow_sounds.tres" id="4_1opsn"]
[ext_resource type="AudioStream" uid="uid://5wd6vi3ygag" path="res://sounds/raw/zombie gtting hit/zombie dying.wav" id="5_x3ndl"]
[ext_resource type="AudioStream" uid="uid://chouulumowweo" path="res://sounds/raw/zombie gtting hit/Sound FX Beni Game - Track 1.wav" id="6_e1vrd"]
[ext_resource type="AudioStream" uid="uid://dxe1q0gjhypi6" path="res://sounds/raw/zombie gtting hit/Sound FX Beni Game - Track 2.wav" id="7_qk51x"]
[ext_resource type="AudioStream" uid="uid://b14dhn0khxv5s" path="res://sounds/raw/zombie gtting hit/Sound FX Beni Game - Track 3.wav" id="8_eu78o"]
[ext_resource type="AudioStream" uid="uid://cprcl1bckwbk0" path="res://sounds/raw/zombie gtting hit/Sound FX Beni Game - Track 4.wav" id="9_4xsxh"]
[ext_resource type="AudioStream" uid="uid://bfki8yvycf8a" path="res://sounds/raw/zombie gtting hit/Sound FX Beni Game - Track 5.wav" id="10_42f31"]
[ext_resource type="AudioStream" uid="uid://7w2q8vrxty5t" path="res://sounds/raw/zombie gtting hit/Sound FX Beni Game - Track 6.wav" id="11_w4f04"]
[ext_resource type="AudioStream" uid="uid://7435m75h24do" path="res://sounds/raw/zombie gtting hit/Sound FX Beni Game - Track 7.wav" id="12_t4b2v"]
[ext_resource type="AudioStream" uid="uid://cqqwu2o5knq1a" path="res://sounds/raw/zombie gtting hit/Sound FX Beni Game - Track 8.wav" id="13_a2yap"]
[ext_resource type="AudioStream" uid="uid://uje6envxmx4a" path="res://sounds/raw/zombie gtting hit/Sound FX Beni Game - Track 9.wav" id="14_4ckca"]
[ext_resource type="AudioStream" uid="uid://dbc4mswe835qk" path="res://sounds/raw/zombie gtting hit/Sound FX Beni Game - Track 10.wav" id="15_u7nck"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7cemh"]
size = Vector2(26.0331, 126)

[sub_resource type="CircleShape2D" id="CircleShape2D_s2htm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ywueq"]
size = Vector2(12.443, 95.958)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ikyx"]
atlas = ExtResource("2_n2clt")
region = Rect2(292, 159, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7e1b"]
atlas = ExtResource("2_n2clt")
region = Rect2(429, 147, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_osig6"]
atlas = ExtResource("2_n2clt")
region = Rect2(557, 147, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt2oa"]
atlas = ExtResource("2_n2clt")
region = Rect2(699, 147, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_5xfan"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ikyx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7e1b")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_osig6")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt2oa")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_do1ar"]
streams_count = 10
stream_0/stream = ExtResource("6_e1vrd")
stream_1/stream = ExtResource("7_qk51x")
stream_2/stream = ExtResource("8_eu78o")
stream_3/stream = ExtResource("9_4xsxh")
stream_4/stream = ExtResource("10_42f31")
stream_5/stream = ExtResource("11_w4f04")
stream_6/stream = ExtResource("12_t4b2v")
stream_7/stream = ExtResource("13_a2yap")
stream_8/stream = ExtResource("14_4ckca")
stream_9/stream = ExtResource("15_u7nck")

[node name="Mob" type="CharacterBody2D" groups=["mobs"]]
position = Vector2(652, 354)
script = ExtResource("1_uxywq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3.05087, 1)
shape = SubResource("RectangleShape2D_7cemh")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
scale = Vector2(62.2149, 62.2149)
shape = SubResource("CircleShape2D_s2htm")

[node name="DamageHitbox" type="Area2D" parent="."]
scale = Vector2(1.28, 1.28)
script = ExtResource("3_pi4co")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageHitbox"]
position = Vector2(0, -2.34375)
rotation = -3.14159
scale = Vector2(5.52521, 1.09097)
shape = SubResource("RectangleShape2D_ywueq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5xfan")

[node name="FollowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1opsn")
volume_db = -20.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_x3ndl")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_do1ar")

[connection signal="hit" from="." to="." method="_on_hit"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_detect_radius_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_detect_radius_body_exited"]
[connection signal="body_entered" from="DamageHitbox" to="DamageHitbox" method="_on_body_entered"]
[connection signal="body_exited" from="DamageHitbox" to="DamageHitbox" method="_on_body_exited"]
